probably fixed absolute elements layout problem

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -87,6 +87,7 @@ main {
 }
 
 #gallCol1-2L {
+    position: relative;
     width: 77%;
     border-right: 1px solid yellow;
     padding-right: 1%;
@@ -99,8 +100,6 @@ main {
     margin-left: 1%;
     overflow: hidden;
 }
-
-
 
 #arrowUp {
     display: none;
@@ -154,7 +153,7 @@ main {
 /*footer*/
 #footerWrapper {
     /*change*/
-    position: absolute; 
+    position: fixed; 
     bottom: 10px;
     left: 6%;
 }
